--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
     "react": "https://esm.sh/react@^19.1.0",
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "react/": "https://esm.sh/react@^19.1.0/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.10.0",
     "react-icons/": "https://esm.sh/react-icons@^5.5.0/",
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
-    "react-image-crop": "https://esm.sh/react-image-crop@^11.0.6"
+    "react-image-crop": "https://esm.sh/react-image-crop@^11.0.6",
+    "@google/genai": "https://esm.sh/@google/genai@^1.12.0"
   }
 }
 </script>
