--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="ms">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyQuran Journal</title>
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#0369a1">
-    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Inter:wght@400;500;600;700;800&family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
@@ -305,6 +304,7 @@
         document.documentElement.classList.add('light');
     }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="text-gray-800 dark:text-slate-200 antialiased transition-colors duration-300">
     <div id="splash-screen"></div>
@@ -343,5 +343,6 @@
             });
         }
     </script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
