--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyQuran Journal</title>
+    <title>MyQuran Journal Anda</title>
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#0369a1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
